<resources>
    <string name="app_name">Calculator</string>
    <string name="initialExpression">" "</string>
    <string name="scalar1">1</string>
    <string name="scalar2">2</string>
    <string name="scalar3">3</string>
    <string name="scalar4">4</string>
    <string name="scalar5">5</string>
    <string name="scalar6">6</string>
    <string name="scalar7">7</string>
    <string name="scalar8">8</string>
    <string name="scalar9">9</string>
    <string name="scalar0">0</string>
    <string name="decimal_point">.</string>
    <string name="deleteKey">Del</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="enter">Enter</string>
    <string name="clear">Clr</string>
    <string name="openParen">(</string>
    <string name="closeParen">)</string>
    <string name="carrot">^</string>
    <string name="sine">sin(</string>
    <string name="cosine">cos(</string>
    <string name="tangent">tan(</string>
    <string name="arcsine">asin(</string>
    <string name="arccosine">acos(</string>
    <string name="arctangent">atan(</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="log">log(</string>
    <string name="nat_log">ln(</string>
    <string name ="absolute_value">abs(</string>
</resources>
